--- a/plugin.xml
+++ b/plugin.xml
@@ -51,7 +51,7 @@
     </config-file>
 
     <framework src="com.google.android.gms:play-services-gcm:+" />
-
+    <source-file src="src/android/libs/gcm.jar" target-dir="libs/" />
     <source-file src="src/android/com/plugin/gcm/CordovaGCMBroadcastReceiver.java" target-dir="src/com/plugin/gcm/" />
     <source-file src="src/android/com/plugin/gcm/GCMIntentService.java" target-dir="src/com/plugin/gcm/" />
     <source-file src="src/android/com/plugin/gcm/PushHandlerActivity.java" target-dir="src/com/plugin/gcm/" />
